--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,1 +1,7 @@
+@import "variables";
+
 @import "Header";
+
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
