Create EventCard component

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,8 @@
 
 @import "Header";
 
+@import "./components/EventCard";
+
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
